--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="hero"></div>
     <div class="content">
         <article class="search-engine-optimization" id="search-engine-optimization">
-            <img src="./Images/search-engine-optimization.jpg"  alt="An open laptop positioned beside a notebook with detailed notes on Search Engine Optimization (SEO)." class="float-left" />
+            <img src="images/search-engine-optimization.jpg"  alt="An open laptop positioned beside a notebook with detailed notes on Search Engine Optimization (SEO)." class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -42,7 +42,7 @@
         </article>
 
         <article class="online-reputation-management" id="online-reputation-management">
-            <img src="./Images/online-reputation-management.jpg" alt="An open laptop center stage, its screen illuminated with a barchart labeled 'Reputation'." class="float-right" />
+            <img src="images/online-reputation-management.jpg" alt="An open laptop center stage, its screen illuminated with a barchart labeled 'Reputation'." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -50,7 +50,7 @@
         </article>
 
         <article class="social-media-marketing" id="social-media-marketing">
-            <img src="./Images/social-media-marketing.jpg" alt="a table, where individuals are immersed in the digital realm of social media." class="float-left" />
+            <img src="images/social-media-marketing.jpg"  alt="a table, where individuals are immersed in the digital realm of social media." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -62,7 +62,7 @@
     <div class="benefits">
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./Images/lead-generation.png" alt="Lead Generation image"/>
+            <img src="images/lead-generation.png" alt="Lead Generation image"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -70,7 +70,7 @@
 
         <article class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./Images/brand-awareness.png" alt="Brand-awareness image" />
+            <img src="images/brand-awareness.png" alt="Brand-awareness image" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -78,7 +78,7 @@
 
         <article class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./Images/cost-management.png" alt="Cost-management image."/>
+            <img src="images/cost-management.png" alt="Cost-management image."/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
